Bug 1654406 - Fix Incorrect Ellipsis Offset When Printing Selections r=bobowen

- Fix double-counted ellipsis offset.
- Rename unselected to nonselected for consistency.

Differential Revision: https://phabricator.services.mozilla.com/D84448